--- a/Sample/MainWindow.xaml
+++ b/Sample/MainWindow.xaml
@@ -14,6 +14,6 @@
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
         <TextBlock Name="joystickInfoLabel"/>
-        <wpfCustomControls:VirtualJoystick Name="virtualJoystick" Grid.Row="2"/>
+        <wpfCustomControls:OnScreenJoystick Name="onScreenJoystick" Grid.Row="2"/>
     </Grid>
 </Window>
